[package]
name = "rust_cli_file_converter"
version = "0.2.0-alpha.1"     
edition = "2024"
description = "Fast CLI to convert files between formats. Experimental: APIs may change. Breaking changes will be made weekly, not ready for production yet."
license = "MIT"
repository = "https://github.com/you/yourtool"
readme = "README.md"
categories = ["command-line-utilities", "encoding"]
keywords = ["cli", "convert", "csv", "json"]


[[bin]]
name = "filevert"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4", features = ["derive"] }
csv = "1.3.1"
serde_json = "1.0.145"


[badges]
maintenance = { status = "experimental" }  # shown on crates.io
